--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -15,7 +15,7 @@
 
     <ScrollView style="@style/i_scrollview">
 
-        <LinearLayout style="@style/linearlayout_view">
+        <LinearLayout style="@style/vlinearlayout">
 
             <LinearLayout
                 android:id="@+id/fldGrpSecB01"
@@ -26,7 +26,7 @@
                     android:id="@+id/cvkfh1"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout style="@style/vlinearlayout">
 
                         <TextView
                             style="@style/textviews"
@@ -75,7 +75,7 @@
                     android:id="@+id/fldGrpCVkf1b02"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout style="@style/vlinearlayout">
 
                         <TextView
                             style="@style/textviews"
@@ -115,7 +115,7 @@
                     android:id="@+id/fldGrpCVkf1b03"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout style="@style/vlinearlayout">
 
                         <TextView
                             style="@style/textviews"
@@ -156,7 +156,7 @@
 
                     <android.support.v7.widget.CardView style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -175,7 +175,7 @@
                         android:id="@+id/fldGrpCVkf1b0"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -191,7 +191,7 @@
                     <!-- kf1b04 Header-->
                     <android.support.v7.widget.CardView style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -210,7 +210,7 @@
                         android:id="@+id/fldGrpCVkf1b0401"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -248,7 +248,7 @@
                         android:id="@+id/fldGrpCVkf1b0402"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -286,7 +286,7 @@
                         android:id="@+id/fldGrpCVkf1b0403"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -324,7 +324,7 @@
                         android:id="@+id/fldGrpCVkf1b0404"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -362,7 +362,7 @@
                         android:id="@+id/fldGrpCVkf1b0405"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -398,7 +398,7 @@
                     <!-- kf1b04 Header-->
                     <android.support.v7.widget.CardView style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -417,7 +417,7 @@
                         android:id="@+id/fldGrpCVkf1b0406"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -455,7 +455,7 @@
                         android:id="@+id/fldGrpCVkf1b0407"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -493,7 +493,7 @@
                         android:id="@+id/fldGrpCVkf1b0408"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -531,7 +531,7 @@
                         android:id="@+id/fldGrpCVkf1b0409"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -569,7 +569,7 @@
                         android:id="@+id/fldGrpCVkf1b0410"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -607,7 +607,7 @@
                         android:id="@+id/fldGrpCVkf1b0411"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -645,7 +645,7 @@
                         android:id="@+id/fldGrpCVkf1b0412"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -683,7 +683,7 @@
                         android:id="@+id/fldGrpCVkf1b0413"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -721,7 +721,7 @@
                         android:id="@+id/fldGrpCVkf1b0414"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -757,7 +757,7 @@
                     <!-- kf1b04 Header-->
                     <android.support.v7.widget.CardView style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -776,7 +776,7 @@
                         android:id="@+id/fldGrpCVkf1b04c01"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -818,7 +818,7 @@
                             android:id="@+id/fldGrpCVkkf1b05"
                             style="@style/cardView">
 
-                            <LinearLayout style="@style/linearlayout_view">
+                            <LinearLayout style="@style/vlinearlayout">
 
                                 <TextView
                                     style="@style/textviews"
@@ -837,7 +837,7 @@
                     <android.support.v7.widget.CardView
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -856,7 +856,7 @@
                         android:id="@+id/fldGrpCVkf1b0501"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -894,7 +894,7 @@
                         android:id="@+id/fldGrpCVkf1b0502"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -932,7 +932,7 @@
                         android:id="@+id/fldGrpCVkf1b0503"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -970,7 +970,7 @@
                         android:id="@+id/fldGrpCVkf1b0504"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -1008,7 +1008,7 @@
                         android:id="@+id/fldGrpCVkf1b0596"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -1053,7 +1053,7 @@
                         android:id="@+id/fldGrpCVkf1b06"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -1091,7 +1091,7 @@
                         android:id="@+id/fldGrpCVkf1b0602"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -1130,7 +1130,7 @@
                         android:id="@+id/fldGrpCVkkf1b07"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviews"
@@ -1149,7 +1149,7 @@
                         android:id="@+id/fldGrpCVkf1b07"
                         style="@style/cardView">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <LinearLayout style="@style/vlinearlayout">
 
                             <TextView
                                 style="@style/textviewsh"
@@ -1185,13 +1185,13 @@
 
                     <LinearLayout
                         android:id="@+id/fldGrpF1Sec07"
-                        style="@style/linearlayout_view"
+                        style="@style/vlinearlayout"
                         android:visibility="@{kf1b07a.checked ? View.VISIBLE : View.GONE}">
 
                         <!--Consent-->
                         <android.support.v7.widget.CardView style="@style/cardView">
 
-                            <LinearLayout style="@style/linearlayout_view">
+                            <LinearLayout style="@style/vlinearlayout">
 
                                 <TextView
                                     style="@style/textviews"
@@ -1210,7 +1210,7 @@
                             android:id="@+id/fldGrpCVkf1b08"
                             style="@style/cardView">
 
-                            <LinearLayout style="@style/linearlayout_view">
+                            <LinearLayout style="@style/vlinearlayout">
 
                                 <TextView
                                     style="@style/textviews"
@@ -1248,7 +1248,7 @@
                             style="@style/cardView"
                             android:visibility="@{kf1b08b.checked ? View.VISIBLE : View.GONE}">
 
-                            <LinearLayout style="@style/linearlayout_view">
+                            <LinearLayout style="@style/vlinearlayout">
 
                                 <TextView
                                     style="@style/textviews"
@@ -1303,7 +1303,7 @@
                                 android:id="@+id/fldGrpCVkf1b010"
                                 style="@style/cardView">
 
-                                <LinearLayout style="@style/linearlayout_view">
+                                <LinearLayout style="@style/vlinearlayout">
 
                                     <TextView
                                         style="@style/textviews"
@@ -1341,7 +1341,7 @@
                                 style="@style/cardView"
                                 android:visibility="@{kf1b10a.checked ? View.VISIBLE : View.GONE}">
 
-                                <LinearLayout style="@style/linearlayout_view">
+                                <LinearLayout style="@style/vlinearlayout">
 
                                     <TextView
                                         style="@style/textviews"
