--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/cvka101"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -104,7 +104,7 @@
                 android:id="@+id/cvka102"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -182,7 +182,7 @@
                 android:id="@+id/cvka103"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -271,7 +271,7 @@
                 android:id="@+id/cvka104"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -350,7 +350,7 @@
                 android:id="@+id/cvka105"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -394,7 +394,7 @@
                 android:id="@+id/cvka106"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -416,7 +416,7 @@
                 android:id="@+id/cvka107"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -453,7 +453,7 @@
                 android:id="@+id/cvka108"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -542,7 +542,7 @@
                 android:id="@+id/cvka109"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -677,7 +677,7 @@
                 android:id="@+id/cvka110"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -802,7 +802,7 @@
                 android:id="@+id/cvka111"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -847,7 +847,7 @@
                     android:id="@+id/cvka112"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout style="@style/vlinearlayout">
 
                         <TextView
                             style="@style/textviews"
@@ -869,7 +869,7 @@
                     android:id="@+id/cvka113"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout style="@style/vlinearlayout">
 
                         <TextView
                             style="@style/textviews"
@@ -913,7 +913,7 @@
                 android:id="@+id/cvka114"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -952,7 +952,7 @@
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -960,7 +960,7 @@
 
                     <LinearLayout
                         android:id="@+id/fldGrpka115"
-                        style="@style/linearlayout_view"
+                        style="@style/vlinearlayout"
                         android:tag="0">
 
                         <CheckBox
@@ -1018,7 +1018,7 @@
                 android:id="@+id/cvka116"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1119,7 +1119,7 @@
                 android:id="@+id/cvka117"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1158,7 +1158,7 @@
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1180,7 +1180,7 @@
                 android:id="@+id/cvka119"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1217,7 +1217,7 @@
                 android:id="@+id/cvka120"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1254,7 +1254,7 @@
                 android:id="@+id/cvka121"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1291,7 +1291,7 @@
                 android:id="@+id/cvka122"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
@@ -1330,7 +1330,7 @@
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <!--ka123-->
                     <TextView
@@ -1379,7 +1379,7 @@
                 android:id="@+id/cvka124"
                 style="@style/cardView">
 
-                <LinearLayout style="@style/linearlayout_view">
+                <LinearLayout style="@style/vlinearlayout">
 
                     <TextView
                         style="@style/textviews"
